<resources>
    <string name="app_name">RimaaShoppingList</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Amount">Amount to get</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="units">Units</string>
    <string name="save">Save</string>
</resources>
