<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aghacom.rimaa.rimaashoppinglist.AddItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Amount"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="6dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="112dp" />

            <EditText
                android:id="@+id/etUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/units"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="170dp" />

            <ImageButton
                android:id="@+id/ibtnImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="299dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="229dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
